Removing staff-body margin if no research highlights

--- a/rca/project_styleguide/templates/patterns/pages/student/student_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/student/student_detail.html
@@ -70,7 +70,7 @@
 
             <section class="section bg bg--dark {% if page.student_gallery %}section--opposite-notch{% endif %}">
 
-                <div class="section__row staff-body">
+                <div class="section__row staff-body {% if research_highlights %}staff-body--margin{% endif %}">
                     <div class="staff-body__container grid">
                         <div class="staff-body__content">
                             <p class="staff-body__introduction heading heading--five" property="schema:description">
