--- a/rca/project_styleguide/templates/patterns/pages/staff/staff_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/staff/staff_detail.html
@@ -59,7 +59,7 @@
 
             <section class="section bg bg--dark">
 
-                <div class="section__row staff-body">
+                <div class="section__row staff-body {% if research_highlights %}staff-body--margin{% endif %}">
                     <div class="staff-body__container grid">
                         <div class="staff-body__content">
                             <p class="staff-body__introduction heading heading--five" property="schema:description">
