All .links to show underline when within form-items

--- a/rca/static_src/sass/components/_link.scss
+++ b/rca/static_src/sass/components/_link.scss
@@ -274,6 +274,18 @@
         }
     }
 
+    // Links in forms should always show underline
+    .form-item & {
+        background-size: 100% 2px;
+
+        &:hover {
+            @include media-query(medium) {
+                // As we show underline by default, added opacity so there's some hover interactivity
+                opacity: 0.8;
+            }
+        }
+    }
+
     .accordion & {
         @include font-size(xxs);
         margin-top: ($gutter * 1.5);
