--- a/rca/project_styleguide/templates/patterns/pages/enquire_to_study/enquire_form_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/enquire_to_study/enquire_form_page.html
@@ -7,6 +7,10 @@
 
 {% block html_class %}no-scroll-behavoir sticky-compensator{% endblock %}
 
+{% block title %}
+    Enquire to study
+{% endblock %}
+
 {% block content %}
 
 <div class="page page--no-hero">
