--- a/rca/static_src/sass/components/_burger.scss
+++ b/rca/static_src/sass/components/_burger.scss
@@ -6,11 +6,49 @@
 
     &__toggle-label {
         @include font-size(xxxs);
-        margin-left: ($gutter / 2);
         color: $color--white;
+        margin-left: ($gutter / 2);
     }
 
     &__toggle-icon {
         stroke: $color--white;
+    }
+
+    .header & {
+        text-align: center;
+        flex-direction: column;
+
+        @include media-query(medium) {
+            flex-direction: row;
+        }
+
+        #{$root}__toggle-label {
+            margin-left: 0;
+
+            @include media-query(medium) {
+                margin-left: ($gutter / 2);
+            }
+        }
+
+        #{$root}__toggle-icon {
+            margin-bottom: ($grid / 2);
+
+            @include media-query(medium) {
+                margin-bottom: 0;
+            }
+        }
+    }
+
+    .headroom--not-top & {
+        text-align: left;
+        flex-direction: row;
+
+        #{$root}__toggle-label {
+            margin-left: ($gutter / 2);
+        }
+
+        #{$root}__toggle-icon {
+            margin-bottom: 0;
+        }
     }
 }
