--- a/rca/project_styleguide/templates/patterns/pages/student/student_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/student/student_detail.html
@@ -46,7 +46,7 @@
                             <div class="job-titles">
                                 <ul class="job-titles__item">
                                 {% if page.degree_award and page.degree_end_date %}
-                                    <li class="job-titles__title">Awarded {{ page.get_degree_award_display }} - {{ page.degree_end_date|date:'Y' }}</li>
+                                    <li class="job-titles__title">Awarded {{ page.get_degree_award_display }} {{ page.degree_end_date|date:'Y' }}</li>
                                         <li class="job-titles__department" property="schema:award">
                                             <a class="body body--two link link--tertiary" href="#">{{ page.programme }}</a>
                                         </li>
