--- a/rca/account_management/templates/account_management/create.html
+++ b/rca/account_management/templates/account_management/create.html
@@ -4,16 +4,22 @@
 {% block titletag %}{% trans "Add Student" %}{% endblock %}
 
 {% block content %}
-{% if form.errors %}
-    <div class="messages">
-        <ul>
-            <li class="error">There were some errors with your form. Please amend the fields highlighted below.
-            </li>
-        </ul>
-    </div>
-{% endif %}
+    {% if form.errors %}
+        <div class="messages">
+            <ul>
+                <li class="error">There were some errors with your form. Please amend the fields highlighted below.
+                </li>
+            </ul>
+        </div>
+    {% endif %}
 
     {% include "wagtailadmin/shared/header.html" with title="Add student" merged=1 tabbed=1 icon="user" %}
+
+    <div class="help-block help-info">
+        <p>Creating a student account with a the 'create student page' option will notify the
+        student of there account and page via email.</p>
+    </div>
+
     <form action="{% url 'student_account_create' %}" method="POST">
             {% csrf_token %}
             <section id="account" class="active nice-padding">
