--- a/rca/project_styleguide/templates/patterns/pages/enquire_to_study/enquire_form_thanks.html
+++ b/rca/project_styleguide/templates/patterns/pages/enquire_to_study/enquire_form_thanks.html
@@ -14,11 +14,11 @@
             <div class="title-area title-area--guide grid">
                 <div class="title-area__content">
                     <h1 class="title-area__heading heading heading--display-two">
-                        Thank you for your enquiry regarding our programmes.
+                        Thank you for your enquiry. We’re excited that you’re thinking of joining us.
                     </h1>
                     <div class="title-area__introduction introduction layout__@large-start-three layout__span-two">
                         <p class="introduction__text heading heading--five">
-                            It has been forwarded to the relevant department and will be dealt with as soon as possible.
+                            Your enquiry has been passed to the relevant team and we'll be in touch soon with more information about your programme(s) of interest.
                         </p>
                     </div>
                 </div>
