Applying card refactor to card—student

--- a/rca/project_styleguide/templates/patterns/molecules/card/card--project.html
+++ b/rca/project_styleguide/templates/patterns/molecules/card/card--project.html
@@ -25,5 +25,5 @@
                 {% endif %}
             </div>
         </div>
-    </{% if item.link %}a{% else %}div{% endif %} class="card__container">
+    </{% if item.link %}a{% else %}div{% endif %}>
 </div>
