--- a/rca/project_styleguide/templates/patterns/molecules/card/card--square.html
+++ b/rca/project_styleguide/templates/patterns/molecules/card/card--square.html
@@ -28,5 +28,5 @@
                 </div>
             {% endif %}
         </div>
-    </{% if item.link %}a{% else %}div{% endif %} class="card__container">
+    </{% if item.link %}a{% else %}div{% endif %}>
 </div>
