--- a/rca/project_styleguide/templates/patterns/molecules/card/card--staff.html
+++ b/rca/project_styleguide/templates/patterns/molecules/card/card--staff.html
@@ -22,5 +22,5 @@
                 {% endfor %}
             </div>
         </div>
-    </{% if item.link %}a{% else %}div{% endif %} class="card__container">
+    </{% if item.link %}a{% else %}div{% endif %}>
 </div>
