--- a/rca/project_styleguide/templates/patterns/molecules/card/card.html
+++ b/rca/project_styleguide/templates/patterns/molecules/card/card.html
@@ -34,5 +34,5 @@
                 </div>
             {% endif %}
         </div>
-    </{% if item.link %}a{% else %}div{% endif %} class="card__container">
+    </{% if item.link %}a{% else %}div{% endif %}>
 </div>
