--- a/rca/project_styleguide/templates/patterns/molecules/card/card_api_content.html
+++ b/rca/project_styleguide/templates/patterns/molecules/card/card_api_content.html
@@ -18,5 +18,5 @@
                 <div class="card__description">{% firstof item.formatted_date item.description|richtext %}</div>
             </div>
         </div>
-    </{% if item.link %}a{% else %}div{% endif %} class="card__container">
+    </{% if item.link %}a{% else %}div{% endif %}>
 </div>
