Remove unwanted default help_text for checkbox widget

--- a/rca/project_styleguide/templates/patterns/pages/enquire_to_study/enquire_form_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/enquire_to_study/enquire_form_page.html
@@ -88,7 +88,7 @@
                                                     {% endif %}
                                                     {% if field.field.required %}<span aria-hidden="true" class="form-item__required">*</span>{% endif %}
                                                 </{% if widget_type == 'checkbox_select_multiple' or widget_type == 'radio_select' %}legend{% else %}label{% endif %}>
-                                                {% if widget_type == 'checkbox_select_multiple' or widget_type == 'radio_select' %}<div class="form-item__instruction">{{ field.help_text|default:'Select all that apply' }}</div>{% endif %}
+                                                {% if widget_type == 'checkbox_select_multiple' or widget_type == 'radio_select' and field.help_text %}<div class="form-item__instruction">{{ field.help_text }}</div>{% endif %}
                                                 {% if widget_type == 'date_input' or widget_type == 'date_time_input' %}<div class="{{ widget_type }}">{% endif %}
                                                 {{ field }}
                                                 {% if widget_type == 'date_input' or widget_type == 'date_time_input' %}</div>{% endif %}
