Update page heading

--- a/rca/enquire_to_study/templates/enquire_to_study/confirm_delete.html
+++ b/rca/enquire_to_study/templates/enquire_to_study/confirm_delete.html
@@ -6,10 +6,9 @@
             <div class="row header-title">
                 <div class="left">
                     <div class="col">
-                        <h1>Delete all Enquiry Form Submissions?</h1>
+                        <h1>Delete all Enquiry Form Submissions older than 7 days?</h1>
                     </div>
                 </div>
-
             </div>
         </header>
     {% endblock %}
