--- a/rca/account_management/templates/account_management/create.html
+++ b/rca/account_management/templates/account_management/create.html
@@ -15,19 +15,25 @@
 
     {% include "wagtailadmin/shared/header.html" with title="Add student" merged=1 tabbed=1 icon="user" %}
 
-    <div class="help-block help-info">
-        <p>Creating a student account with the 'create student page' option will notify the
-        student of their account and page via email.</p>
-    </div>
-
     <form action="{% url 'student_account_create' %}" method="POST">
             <section id="account" class="active nice-padding">
-                {% block fields %}
-                    {{ form.as_p }}
-                {% endblock fields %}
+            <div class="help-block help-info">
+                <p>Creating a student account with the 'create student page' option will notify the
+                student of their account and page via email.</p>
+            </div>
+                <ul class="fields">
+                    {% block fields %}
+                        {% include "wagtailadmin/shared/field_as_li.html" with field=form.username %}
+                        {% include "wagtailadmin/shared/field_as_li.html" with field=form.first_name %}
+                        {% include "wagtailadmin/shared/field_as_li.html" with field=form.last_name %}
+                        {% include "wagtailadmin/shared/field_as_li.html" with field=form.email %}
+                        {% include "wagtailadmin/shared/field_as_li.html" with field=form.create_student_page %}
+                    {% endblock fields %}
+                    <li>
+                      <input type="submit" value="{% trans 'Add user' %}" class="button" />
+                    </li>
+                </ul>
             </section>
-            <input type="submit" value="{% trans 'Add user' %}" class="button" />
-
     </form>
 {% endblock %}
 
