Update template with new field

--- a/rca/account_management/templates/account_management/create.html
+++ b/rca/account_management/templates/account_management/create.html
@@ -27,6 +27,7 @@
                         {% include "wagtailadmin/shared/field_as_li.html" with field=form.first_name %}
                         {% include "wagtailadmin/shared/field_as_li.html" with field=form.last_name %}
                         {% include "wagtailadmin/shared/field_as_li.html" with field=form.email %}
+                        {% include "wagtailadmin/shared/field_as_li.html" with field=form.student_image_collection %}
                         {% include "wagtailadmin/shared/field_as_li.html" with field=form.create_student_page %}
                     {% endblock fields %}
                     <li>
