--- a/rca/project_styleguide/templates/patterns/pages/enquire_to_study/enquire_form_thanks.html
+++ b/rca/project_styleguide/templates/patterns/pages/enquire_to_study/enquire_form_thanks.html
@@ -40,7 +40,7 @@
         <script>
             window.dataLayer = window.dataLayer || [];
             window.dataLayer.push(
-                {{ enquiry_form_session_data|safe }}
+                {{ enquiry_form_session_data }}
                 );
         </script>
     {% endif %}
