Remove pointer on active menu items

--- a/rca/static_src/sass/layout/_header.scss
+++ b/rca/static_src/sass/layout/_header.scss
@@ -113,6 +113,7 @@
 
         .menu-active & {
             opacity: 1;
+            cursor: initial;
         }
     }
 
@@ -132,6 +133,7 @@
 
         .search-active & {
             opacity: 1;
+            cursor: initial;
         }
     }
 
