Adding share components

--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -105,6 +105,8 @@
 @import 'components/search';
 @import 'components/search-toggle';
 @import 'components/section';
+@import 'components/share';
+@import 'components/share-item';
 @import 'components/short-course-details';
 @import 'components/short-course-details-item';
 @import 'components/skip-link';
