--- a/rca/static_src/sass/components/_introduction.scss
+++ b/rca/static_src/sass/components/_introduction.scss
@@ -17,6 +17,12 @@
     .section__row & {
         @include font-size(s);
         margin-right: ($gutter * 1.5);
+
+        &#{$root}--narrow {
+            @include media-query(large) {
+                margin-right: 33%;
+            }
+        }
     }
 
     .app--landing-page &,
