--- a/rca/project_styleguide/templates/patterns/pages/editorial/editorial_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/editorial/editorial_detail.html
@@ -90,7 +90,7 @@
                         </div>
                     {% endif %}
                     <div class="streamfield rich-text layout__start-one layout__span-two layout__@large-start-two layout__@large-span-three">
-                        {% include "patterns/molecules/streamfield/stream_block.html" with value=page.body guide_page=True %}
+                        {% include "patterns/molecules/streamfield/stream_block.html" with value=page.body %}
                     </div>
                 </div>
 
