--- a/rca/project_styleguide/templates/patterns/pages/editorial/editorial_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/editorial/editorial_detail.html
@@ -100,6 +100,16 @@
                     </div>
                 </div>
 
+                <div class="section__row">
+                    {% if page.inline_cta %}
+                        <div class="section__row section__row--last">
+                            {% for block in page.inline_cta %}
+                                {% include "patterns/molecules/text-teaser/text-teaser.html" with teaser=block.value heading_size="small" %}
+                            {% endfor %}
+                        </div>
+                    {% endif %}
+                </div>
+
                 <div class="section__notch">
                     <div class="section__notch-fill section__notch-fill--second-col"></div>
                 </div>
