--- a/rca/project_styleguide/templates/patterns/pages/editorial/editorial_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/editorial/editorial_detail.html
@@ -85,7 +85,7 @@
 
         <div class="page__content">
 
-            <div class="section bg bg--light">
+            <section class="section bg bg--light">
 
                 <div class="section__row section__row--first-small section__row--last grid">
                     {% if not page.introduction_image %}
@@ -114,7 +114,21 @@
                     <div class="section__notch-fill section__notch-fill--second-col"></div>
                 </div>
 
-            </div>
+            </section>
+
+            <section class="section bg bg--dark">
+                {% if related_pages.items %}
+                    <div class="section__row section__row--first section__row--last-large">
+                        {% include "patterns/organisms/index-module/index-module.html" with items=related_pages.items title=related_pages.title id=page.related_pages_title anchor_heading=True %}
+                    </div>
+                {% endif %}
+
+                {% if page.contact_model_image or page.contact_model_text or page.contact_model_email or page.contact_model_url or page.contact_model_form %}
+                    <div class="section__row section__row--first">
+                        {% include "patterns/organisms/contact/contact.html" with heading=page.contact_model_title text=page.contact_model_text image=page.contact_model_image anchor_heading=True %}
+                    </div>
+                {% endif %}
+            </section>
 
         </div>
 
