--- a/rca/static_src/sass/components/_modal-launcher.scss
+++ b/rca/static_src/sass/components/_modal-launcher.scss
@@ -76,4 +76,9 @@
             color: $color--black;
         }
     }
+
+    /* Template specific */
+    .app--event-detail & {
+        width: 100%;
+    }
 }
